2009-08-17  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (ask_manpage): use avta_pager_command

	* avtaddons.h, avtreadfile.c (avta_pager_file)
	(avta_pager_command): option: startline

	* avatarsay.c: optimization: options

	* avatarsay.c (checkoptions): code-cleanup

	* avatarsay.c: reorder: help and checkoptons closer together

2009-08-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h, avtreadfile.c (avta_pager_file)
	(avta_pager_command): new functions
	avatarsay.c: adapted

2009-08-14  Andreas K. Foerster  <info@akfoerster.de>

	* avtreadfile.c: all functions return -1 on error

2009-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* avtreadfile.c: completely rewritten
	avtaddons.h, avatarsay.c: adapted

	* avatar.c (avt_pager_mb):
	deactivate external key/mouse handlers in pager mode

	* avatar.c (avt_credits):
	deactivate external key/mouse handlers in credits mode

	* avatar.c (avt_pager_mb):
	leave the pager by pressing the wheel (middle button)

2009-08-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (ask_manpage): show syntax

	* avtterm.c (prg_wheelhandler): new function
	(avta_term_run): adapted

	* avatar.c (avt_analyze_event):
	call ext. mousehandler also when pointer outside of balloon

	* akfavatar.h, avatar.c (avt_set_mouse_visible): new function
	avtterm.c (avta_term_run): adapted

2009-08-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (ask_manpage): set GROFF_NO_SGR=1

	* avatarsay.c (ask_manpage): use the new pager

2009-08-10  Andreas K. Foerster  <info@akfoerster.de>

	* avtarsay.c (checkoptions): new option --pager (-P)
	(run_pager): new function
	(main): adapted

	* avtreadfile.c (avta_read_file):
	when file_name is NULL, read from stdin

	* avtarsay.c (run_pager): accept "-" as special filename

	* avatar.c (avt_overstrike): new function
	(avt_say, avt_say_len): adapted

2009-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (handle_back_command): fix for some systems